[package]
name = "nvbit-model"
version = "0.0.36"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "NVIDIA NVBIT models for serialization and deserialization"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/nvbit-model"
homepage = "https://github.com/romnn/nvbit-rs"
repository = "https://github.com/romnn/nvbit-rs"
categories = [
  "api-bindings",
  "development-tools::profiling",
  "os::unix-apis",
]
keywords = [
  "nvbit",
  "profiling",
  "gpgpu",
  "nvidia",
  "ffi",
]
exclude = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
