[package]
name = "nvbit-rs"
version = "0.0.4"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Idiomatic library for using the NVIDIA NVBIT binary instrumentation library"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/nvbit-rs"
homepage = "https://github.com/romnn/nvbit-rs"
repository = "https://github.com/romnn/nvbit-rs"
categories = [
  "api-bindings",
  "development-tools::profiling",
  "os::unix-apis",
]
keywords = [
  "nvbit",
  "profiling",
  "gpgpu",
  "nvidia",
  "ffi",
]
exclude = []

[dependencies]
nvbit-sys = { path = "../nvbit-sys" }
cxx = "1.0"
thiserror = "1"
