[package]
name = "nvbit-rs"
version = "0.0.22"
edition = "2021"
publish = true
authors = ["romnn <contact@romnn.com>"]
description = "Idiomatic library for using the NVIDIA NVBIT binary instrumentation library"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/nvbit-rs"
homepage = "https://github.com/romnn/nvbit-rs"
repository = "https://github.com/romnn/nvbit-rs"
categories = [
  "api-bindings",
  "development-tools::profiling",
  "os::unix-apis",
]
keywords = [
  "nvbit",
  "profiling",
  "gpgpu",
  "nvidia",
  "ffi",
]
exclude = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
nvbit-sys = { path = "../nvbit-sys" }
cxx = "1.0"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
rmp-serde = "1"
