[package]
name = "nvbit-sys"
version = "0.1.0"
edition = "2021"
links = "nvbit"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
cxx = "1.0"
# libc = "0.2"
# add cuda-sys as an optional dependency?
# libssh2-sys = { version = "0.2.19", optional = true }

[build-dependencies]
reqwest = { version = "0", features = ["blocking"] }
pkg-config = "0.3"
cxx-build = "1"
bindgen = "0.61"
cc = { version = "1", features = ['parallel'] }
bzip2 = "0.4"
tar = "0.4"

[features]
default = ["utils"]
utils = []
