[package]
name = "nvbit-sys"
version = "0.0.1"
edition = "2021"
links = "nvbit"
build = "build.rs"

description = "Native bindings to the NVIDIA NVBIT binary instrumentation library"
authors = ["romnn <contact@romnn.com>"]
license-file = "LICENSE"
homepage = "https://github.com/romnn/nvbit-rs"
repository = "https://github.com/romnn/nvbit-rs"
categories = [
  "external-ffi-bindings",
  "development-tools::profiling",
  "os::unix-apis",
]
keywords = [
  "nvbit",
  "profiling",
  "gpgpu",
  "nvidia",
  "ffi",
]
documentation = "https://docs.rs/nvbit-sys"
exclude = [
  "nvbit_release/*",
  "debug/*",
]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
cxx = "1.0"

[build-dependencies]
reqwest = { version = "0", features = ["blocking"] }
pkg-config = "0.3"
cxx-build = "1"
bindgen = "0.61"
cc = { version = "1", features = ['parallel'] }
bzip2 = "0.4"
tar = "0.4"

[features]
default = ["utils"]
utils = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]
