[package]
name = "nvbit-sys"
version = "0.0.32"
edition = "2021"
publish = true
links = "nvbit"
build = "build.rs"
authors = ["romnn <contact@romnn.com>"]
description = "Native bindings to the NVIDIA NVBIT binary instrumentation library"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/nvbit-sys"
homepage = "https://github.com/romnn/nvbit-rs"
repository = "https://github.com/romnn/nvbit-rs"
categories = [
  "external-ffi-bindings",
  "development-tools::profiling",
  "os::unix-apis",
]
keywords = [
  "nvbit",
  "profiling",
  "gpgpu",
  "nvidia",
  "ffi",
]
exclude = [
  "debug/*",
]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[features]
default = ["utils"]
utils = []

[dependencies]
cxx = "1.0"
nvbit-model = { path = "../nvbit-model" }

[build-dependencies]
reqwest = { version = "0", features = ["blocking"] }
pkg-config = "0.3"
cxx-build = "1"
bindgen = "0.61"
cc = { version = "1", features = ['parallel'] }
bzip2 = "0.4"
tar = "0.4"
glob = "0.3"
