[package]
name = "accelsim"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nvbit-rs = { path = "../../nvbit-rs" }
lazy_static = "1"
rustacuda = "0.1"
# so we can access the DEP_NVBIT_INCLUDE during the build
nvbit-sys = { path = "../../nvbit-sys" }

[build-dependencies]
cc = "1"
bindgen = "0.61"
