[package]
name = "accelsim"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
nvbit-rs = { path = "../../nvbit-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
rustacuda = "0.1"
# so we can access the `DEP_NVBIT_INCLUDE` environment variable during the build
# this is a problem because there is no version field here :(
nvbit-sys = { path = "../../nvbit-sys" }

[build-dependencies]
cc = "1"
bindgen = "0.61"
