[package]
name = "dynamic"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
nvbit-rs = { path = "../../nvbit-rs" }
lazy_static = "1"
rustacuda = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# dependency on nvbit-sys so that we can access `DEP_NVBIT_INCLUDE`
nvbit-sys = { path = "../../nvbit-sys" }

[build-dependencies]
cc = "1"
bindgen = "0.61"
lazy_static = "1"
regex = "1"
