[package]
name = "mem_printf"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
nvbit-rs = { path = "../../nvbit-rs" }
lazy_static = "1"
# dependency on nvbit-sys so that we can access `DEP_NVBIT_INCLUDE`
nvbit-sys = { path = "../../nvbit-sys" }

[build-dependencies]
nvbit-build = { path = "../../nvbit-build" }
